ci: atualizar AsyncUtils para utilizar Virtual Threads, melhorando a performance e reduzindo o uso de memória